--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-
+              "src/js/Verkeer.js"
             ]
           },
           "configurations": {
